fix for mobile nav, too much padding

--- a/static/css/sass/nav.scss
+++ b/static/css/sass/nav.scss
@@ -50,7 +50,7 @@
         padding: revert;
     }
     @media only screen and (max-width: 767px) {
-        padding: 0 5rem;
+        padding: 0 2rem;
     }
 }
 
